@@ -105,6 +105,7 @@ Remove buffer full indicator when pressing shift+e on External Audio Source wind
 Fixed right click on upper buttons when menu closed and no windows open
 Fixed alt key pressed when changing to another window by using alt-tab on xwindow, cocoa, sdl1 and sdl2 drivers
 Fixed TZX autoload as Real Tape on Spectrum +3
+Fixed saving .scr screen when located on RAM 7
 Fixed esxdos handler call F_GETCWD when root directory (/)
 Fixed esxdos handler call F_GETCWD when directory does not exist
 Fixed hotswap ZX80 to ZX81, ZX81 to ZX80
